# movies-on-my-radar

./: .env.example  .gitignore  DECISIONS.md  PROJECT.md  README.md  pyproject.toml
tests/: test_main.py
